Increase spacing in AgentMD guide

--- a/index.html
+++ b/index.html
@@ -1279,6 +1279,8 @@
         #agentmd-guide .info-tip-item { display: flex; align-items: flex-start; gap: 12px; padding: 12px; background: #fefce8; border-radius: 8px; }
         #agentmd-guide .info-tip-dot { width: 8px; height: 8px; background: #eab308; border-radius: 50%; margin-top: 8px; flex-shrink: 0; }
         #agentmd-guide .info-tip-text { color: #374151; }
+        #agentmd-guide .section-title { margin-bottom: 1.5rem; }
+        #agentmd-guide section + section { margin-top: 3rem; }
         #agentmd-guide .hidden { display: none; }
 
         @media (max-width: 640px) {
@@ -1286,6 +1288,7 @@
             #agentmd-guide .info-anatomy-grid { grid-template-columns: 1fr; }
             #agentmd-guide .info-benefits-grid { grid-template-columns: 1fr; }
             #agentmd-guide .info-practical-grid { grid-template-columns: 1fr; }
+            #agentmd-guide section + section { margin-top: 3.5rem; }
         }
     </style>
 </head>
