Style real-world apps section

--- a/index.html
+++ b/index.html
@@ -1607,58 +1607,44 @@
                 </div>
             </section>
 
-            <section class="py-16 sm:py-24 bg-white" id="practical-benefits">
-                <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-                    <div class="text-center">
-                        <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
-                            Real-World Applications
-                        </h2>
-                        <p class="mt-4 text-lg leading-8 text-gray-600 max-w-2xl mx-auto">
-                            From code to compliance, <code>agent.md</code> delivers tangible value across diverse scenarios.
-                        </p>
+            <section class="space-y-6" id="practical-benefits">
+                <h2 class="section-title">Real-World Applications</h2>
+
+                <div class="info-practical-grid">
+                    <div class="info-practical-card color-1">
+                        <div class="info-practical-content">
+                            <div class="info-practical-dot dot-1"></div>
+                            <p class="info-practical-text">Consistent Code Generation – Enforce coding standards and architectural patterns for clean, uniform code.</p>
+                        </div>
                     </div>
-                    <div class="mt-12 grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3">
-                        <div class="practical-card p-6 rounded-xl flex items-start gap-4">
-                            <div class="icon flex-shrink-0 w-12 h-12 rounded-lg flex items-center justify-center"><i class="fa-solid fa-code text-xl"></i></div>
-                            <div>
-                                <h3 class="text-lg font-semibold text-gray-900">Consistent Code Generation</h3>
-                                <p class="mt-1 text-base text-gray-600">Enforce coding standards and architectural patterns for clean, uniform code.</p>
-                            </div>
+                    <div class="info-practical-card color-2">
+                        <div class="info-practical-content">
+                            <div class="info-practical-dot dot-2"></div>
+                            <p class="info-practical-text">Context-Aware Refactors – Perform complex refactoring with a full understanding of the repo's structure.</p>
                         </div>
-                        <div class="practical-card p-6 rounded-xl flex items-start gap-4">
-                            <div class="icon flex-shrink-0 w-12 h-12 rounded-lg flex items-center justify-center"><i class="fa-solid fa-wand-magic-sparkles text-xl"></i></div>
-                            <div>
-                                <h3 class="text-lg font-semibold text-gray-900">Context-Aware Refactors</h3>
-                                <p class="mt-1 text-base text-gray-600">Perform complex refactoring with a full understanding of the repo's structure.</p>
-                            </div>
+                    </div>
+                    <div class="info-practical-card color-3">
+                        <div class="info-practical-content">
+                            <div class="info-practical-dot dot-3"></div>
+                            <p class="info-practical-text">Multi-Agent Coordination – Use <code>agent.md</code> as a shared "brain" for specialized agents to collaborate.</p>
                         </div>
-                        <div class="practical-card p-6 rounded-xl flex items-start gap-4">
-                            <div class="icon flex-shrink-0 w-12 h-12 rounded-lg flex items-center justify-center"><i class="fa-solid fa-people-group text-xl"></i></div>
-                            <div>
-                                <h3 class="text-lg font-semibold text-gray-900">Multi-Agent Coordination</h3>
-                                <p class="mt-1 text-base text-gray-600">Use <code>agent.md</code> as a shared "brain" for specialized agents to collaborate.</p>
-                            </div>
+                    </div>
+                    <div class="info-practical-card color-4">
+                        <div class="info-practical-content">
+                            <div class="info-practical-dot dot-4"></div>
+                            <p class="info-practical-text">Compliance &amp; Security – Embed security checklists and compliance rules to validate agent outputs.</p>
                         </div>
-                        <div class="practical-card p-6 rounded-xl flex items-start gap-4">
-                            <div class="icon flex-shrink-0 w-12 h-12 rounded-lg flex items-center justify-center"><i class="fa-solid fa-user-shield text-xl"></i></div>
-                            <div>
-                                <h3 class="text-lg font-semibold text-gray-900">Compliance & Security</h3>
-                                <p class="mt-1 text-base text-gray-600">Embed security checklists and compliance rules to validate agent outputs.</p>
-                            </div>
+                    </div>
+                    <div class="info-practical-card color-5">
+                        <div class="info-practical-content">
+                            <div class="info-practical-dot dot-5"></div>
+                            <p class="info-practical-text">Automated Documentation – Instruct an agent to read your code and generate well-structured documentation.</p>
                         </div>
-                        <div class="practical-card p-6 rounded-xl flex items-start gap-4">
-                            <div class="icon flex-shrink-0 w-12 h-12 rounded-lg flex items-center justify-center"><i class="fa-solid fa-file-pen text-xl"></i></div>
-                            <div>
-                                <h3 class="text-lg font-semibold text-gray-900">Automated Documentation</h3>
-                                <p class="mt-1 text-base text-gray-600">Instruct an agent to read your code and generate well-structured documentation.</p>
-                            </div>
-                        </div>
-                        <div class="practical-card p-6 rounded-xl flex items-start gap-4">
-                            <div class="icon flex-shrink-0 w-12 h-12 rounded-lg flex items-center justify-center"><i class="fa-solid fa-gavel text-xl"></i></div>
-                            <div>
-                                <h3 class="text-lg font-semibold text-gray-900">Non-Coding Scenarios</h3>
-                                <p class="mt-1 text-base text-gray-600">Apply the same principles to legal, marketing, or research tasks for consistency.</p>
-                            </div>
+                    </div>
+                    <div class="info-practical-card color-1">
+                        <div class="info-practical-content">
+                            <div class="info-practical-dot dot-1"></div>
+                            <p class="info-practical-text">Non-Coding Scenarios – Apply the same principles to legal, marketing, or research tasks for consistency.</p>
                         </div>
                     </div>
                 </div>
