Replace benefits section with tailwind grid

--- a/index.html
+++ b/index.html
@@ -1453,72 +1453,57 @@
                 </p>
             </div>
 
-            <section class="space-y-8">
-                <h2 class="section-title">Four Key Benefits</h2>
 
-                <div class="info-benefits-grid">
-                    <div class="info-benefit-card">
-                        <div class="info-benefit-content">
-                            <div class="info-benefit-icon gradient-1">
-                                <i data-lucide="file-text" style="width: 24px; height: 24px;"></i>
-                            </div>
-                            <div class="space-y-2">
-                                <div class="info-benefit-header">
-                                    <span class="info-benefit-number">1</span>
-                                    <h3 class="info-benefit-title">Single source of truth</h3>
-                                </div>
-                                <p class="info-benefit-description">Directory layout, naming, CI steps stay consistent across agents & humans.</p>
-                            </div>
-                        </div>
+            <section id="key-benefits" class="py-16 sm:py-24 bg-white">
+                <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+                    <div class="text-center">
+                        <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
+                            Core Advantages of agent.md
+                        </h2>
+                        <p class="mt-4 text-lg leading-8 text-gray-600 max-w-2xl mx-auto">
+                            A single file to streamline agent interactions, boost performance, and ensure safety.
+                        </p>
                     </div>
-
-                    <div class="info-benefit-card">
-                        <div class="info-benefit-content">
-                            <div class="info-benefit-icon gradient-2">
-                                <i data-lucide="zap" style="width: 24px; height: 24px;"></i>
+                    <div class="mt-12 grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-4">
+                         <div class="benefit-card bg-gray-50 rounded-xl p-6 text-center">
+                            <div class="flex items-center justify-center h-12 w-12 rounded-lg bg-indigo-500 text-white mx-auto">
+                                <i class="fa-solid fa-file-lines text-xl"></i>
                             </div>
-                            <div class="space-y-2">
-                                <div class="info-benefit-header">
-                                    <span class="info-benefit-number">2</span>
-                                    <h3 class="info-benefit-title">Higher LLM accuracy</h3>
-                                </div>
-                                <p class="info-benefit-description">Codex scored +5 pp when an AGENTS.md was present (75% → 80%).</p>
-                            </div>
+                            <h3 class="mt-5 text-lg font-semibold leading-6 text-gray-900">Single Source of Truth</h3>
+                            <p class="mt-2 text-base text-gray-600">
+                                Consolidate prompts, docs, and configs into one portable file for ultimate clarity.
+                            </p>
                         </div>
-                    </div>
-
-                    <div class="info-benefit-card">
-                        <div class="info-benefit-content">
-                            <div class="info-benefit-icon gradient-3">
-                                <i data-lucide="users" style="width: 24px; height: 24px;"></i>
+                        <div class="benefit-card bg-gray-50 rounded-xl p-6 text-center">
+                            <div class="flex items-center justify-center h-12 w-12 rounded-lg bg-indigo-500 text-white mx-auto">
+                                <i class="fa-solid fa-crosshairs text-xl"></i>
                             </div>
-                            <div class="space-y-2">
-                                <div class="info-benefit-header">
-                                    <span class="info-benefit-number">3</span>
-                                    <h3 class="info-benefit-title">Zero‑friction onboarding</h3>
-                                </div>
-                                <p class="info-benefit-description">New contributors "read the manual" in one file; agents do the same in milliseconds.</p>
-                            </div>
+                            <h3 class="mt-5 text-lg font-semibold leading-6 text-gray-900">Higher LLM Accuracy</h3>
+                            <p class="mt-2 text-base text-gray-600">
+                                Provide deep, structured context to your LLM, drastically improving response quality.
+                            </p>
                         </div>
-                    </div>
-
-                    <div class="info-benefit-card">
-                        <div class="info-benefit-content">
-                            <div class="info-benefit-icon gradient-4">
-                                <i data-lucide="shield" style="width: 24px; height: 24px;"></i>
+                        <div class="benefit-card bg-gray-50 rounded-xl p-6 text-center">
+                            <div class="flex items-center justify-center h-12 w-12 rounded-lg bg-indigo-500 text-white mx-auto">
+                                <i class="fa-solid fa-rocket text-xl"></i>
                             </div>
-                            <div class="space-y-2">
-                                <div class="info-benefit-header">
-                                    <span class="info-benefit-number">4</span>
-                                    <h3 class="info-benefit-title">Built‑in guard‑rails</h3>
-                                </div>
-                                <p class="info-benefit-description">Embed commands like npm run lint && npm audit; the agent must pass before finishing.</p>
+                            <h3 class="mt-5 text-lg font-semibold leading-6 text-gray-900">Zero-Friction Onboarding</h3>
+                            <p class="mt-2 text-base text-gray-600">
+                                New team members or agents get up to speed instantly by loading one `agent.md` file.
+                            </p>
+                        </div>
+                        <div class="benefit-card bg-gray-50 rounded-xl p-6 text-center">
+                            <div class="flex items-center justify-center h-12 w-12 rounded-lg bg-indigo-500 text-white mx-auto">
+                                <i class="fa-solid fa-shield-halved text-xl"></i>
                             </div>
+                            <h3 class="mt-5 text-lg font-semibold leading-6 text-gray-900">Built-in Guard-rails</h3>
+                            <p class="mt-2 text-base text-gray-600">
+                                Define clear operational boundaries to ensure safe and compliant agent outputs.
+                            </p>
                         </div>
                     </div>
                 </div>
             </section>
-
             <section class="space-y-6">
                 <h2 class="section-title">Template Anatomy</h2>
 
